--- a/package.json
+++ b/package.json
@@ -1,40 +1,57 @@
 {
-  "name": "redux-dunk",
-  "version": "1.0.0",
-  "description": "Better effect middleware for redux",
-  "main": "index.js",
-  "directories": {
-    "test": "tests"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
-    "lint": "tslint -p tsconfig.json"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/prezi/redux-dunk.git"
-  },
-  "keywords": [
-    "redux",
-    "effect",
-    "middleware",
-    "redux-middleware",
-    "thunk",
-    "dunk",
-    "functional"
-  ],
-  "author": "Najib Ghadri",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/prezi/redux-dunk/issues"
-  },
-  "homepage": "https://github.com/prezi/redux-dunk#readme",
-  "devDependencies": {
-    "prettier": "^2.2.1",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.2.4"
-  }
+    "name": "redux-dunk",
+    "version": "1.0.0",
+    "description": "Better effect middleware for redux",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/prezi/redux-dunk.git"
+    },
+    "keywords": [
+        "redux",
+        "effect",
+        "middleware",
+        "redux-middleware",
+        "thunk",
+        "dunk",
+        "functional"
+    ],
+    "author": "Najib Ghadri",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/prezi/redux-dunk/issues"
+    },
+    "homepage": "https://github.com/prezi/redux-dunk#readme",
+    "main": "lib/dunk.js",
+    "types": "lib/dunk.d.ts",
+    "scripts": {
+        "test": "jest --config jestconfig.json",
+        "build": "tsc",
+        "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+        "lint": "tslint -p tsconfig.json",
+        "prepare": "npm run build",
+        "prepublishOnly": "npm test && npm run lint",
+        "preversion": "npm run lint",
+        "version": "npm run format && git add -A src",
+        "postversion": "git push && git push --tags"
+    },
+    "peerDependencies": {
+        "redux": "^4"
+    },
+    "devDependencies": {
+        "@types/jest": "^26.0.23",
+        "@types/redux-mock-store": "^1.0.2",
+        "jest": "^26.6.3",
+        "prettier": "^2.2.1",
+        "redux": "^4",
+        "redux-dry-ts-actions": "^1.3.0",
+        "redux-mock-store": "^1.5.4",
+        "ts-jest": "^26.5.5",
+        "tslint": "^6.1.3",
+        "tslint-config-prettier": "^1.18.0",
+        "typescript": "^4.2.4"
+    },
+    "files": [
+        "lib",
+        "src"
+    ]
 }
