--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "redux-dunk",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "Better effect middleware for redux",
     "repository": {
         "type": "git",
@@ -26,7 +26,7 @@
     "scripts": {
         "test": "jest --config jestconfig.json",
         "build": "tsc",
-        "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+        "format": "prettier --write \"src/**/*.ts\"",
         "lint": "tslint -p tsconfig.json",
         "prepare": "npm run build",
         "prepublishOnly": "npm test && npm run lint",
